--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -4,6 +4,7 @@
       = message.user.name
     .upper-message__date
       = message.created_at.strftime("%Y/%m/%d %H:%M")
+  .lower-meesage
     - if message.content.present?
       %p.lower-message__content
         = message.content
