--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -27,15 +27,8 @@
           = f.hidden_field :users, name: "group[user_ids][]" ,value: "#{current_user.id}"
           %p.chat-group-user__name
             = current_user.name
-        - @group.users.each do |user|
-          - unless user == current_user
-            .chat-group-user.clearfix{'data-user-id': current_user.id, id: "#{user.id}"}
-              = hidden_field_tag 'group[user_ids][]', user.id
-              %p.chat-group-user__name
-                = user.name
-              %a.user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn{"data-user-id": user.id, "data-user-name": user.name}
-                削除
-        
+        = render 'group_user'
+
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
     .chat-group-form__field--right
