--- a/app/assets/stylesheets/modules/chat.scss
+++ b/app/assets/stylesheets/modules/chat.scss
@@ -34,6 +34,9 @@
       padding: 0 20px;
       &__button {
         color: $light_blue;
+      }
+
+      & a {
         text-decoration: none;
       }
     }
